--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "happy-dom": "^14.12.3",
+    "i18next": "^23.15.1",
+    "i18next-browser-languagedetector": "^8.0.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.400.0",
     "match-sorter": "^6.3.4",
@@ -33,6 +35,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.1",
+    "react-i18next": "^15.0.2",
     "react-router-dom": "^6.24.1",
     "recharts": "^2.12.7",
     "shadcn-ui": "^0.8.0",
